improvement: project finished (desktop version) fix: added components to template

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: 'Manrope';
+  src: url('./assets/fonts/Manrope-Medium.ttf');
+}
+
+@font-face {
+  font-family: 'OrchideaPro';
+  src: url('./assets/fonts/OrchideaPro-Medium.ttf');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Manrope', 'OrchideaPro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
