--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,11 @@
 .header {
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    width: calc(100% - 520px);
     background: linear-gradient(0deg, #464341 0%, #010101 100%);
     padding: 35px 260px;
+    z-index: 10;
     color: #fff;
 }
 
@@ -10,4 +13,5 @@
     font-family: 'Manrope';
     font-size: 24px;
     line-height: 33px;
+    padding-right: 90px;
 }
